--- a/dj_learn/dj_static_functionality/static/css/style.css
+++ b/dj_learn/dj_static_functionality/static/css/style.css
@@ -1,4 +1,8 @@
-body{
+body {
     background-color: darkslategrey;
-    color:seashell;
+    color           : seashell;
+}
+
+hr {
+    background-color:seashell;
 }
