add some changes

--- a/dj_learn/dj_template_Inheritance/Inheritance_demo/templates/home.html
+++ b/dj_learn/dj_template_Inheritance/Inheritance_demo/templates/home.html
@@ -4,5 +4,5 @@
 
 {% block title %}{{ block.super }}| home{% endblock title %}
 
-{% block heading %}{{ block.super }}hello home{% endblock heading %}
+{% block heading %}{{ block.super }} -> hello home{% endblock heading %}
 
