--- a/dj_learn/dj_forms_API/templates/studentform.html
+++ b/dj_learn/dj_forms_API/templates/studentform.html
@@ -47,6 +47,12 @@
     </div>
   </form>
 
+  <hr>
+
+  <form action="" method="post">
+    {{eg_widget.as_p}}
+  </form>
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
