--- a/dj_learn/dj_forms_API/templates/studentform.html
+++ b/dj_learn/dj_forms_API/templates/studentform.html
@@ -10,6 +10,11 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <style>
+      .somecss{
+        background-color: blueviolet;
+      }
+    </style>
 </head>
 
 <body>
@@ -45,6 +50,12 @@
       <label>help text:</label>
       {{fm.name.help_text}}
     </div>
+  </form>
+
+  <hr>
+
+  <form action="" method="post">
+    {{eg_args.as_p}}
   </form>
 
   <hr>
